# paperstream

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
paperstream/: __init__.py  __main__.py  create_diary.py  encode_diary.py  extract_framed_area.py  log_configuration.ini  marking_server.py  paperstream.spec  static_resources_middleware.py
paperstream/input/2_template_to_encode/: template_gray_scale.tif
paperstream/static/: .eslintrc.js  create.html  create.js  encode.html  encode.js  general.css  index.html  landingPage.js  package.json  w3.css
test/: test_create_diary.py  test_encode_diary.py
test/comparison_files/: test_diary_png.csv
test/output/: test_diary_tif.csv
test/output/temporal/answers_areas/test_diary_png/: answer_area_page_0.tif  answer_area_page_0_a.tif  answer_area_page_1.tif  answer_area_page_1_a.tif  answer_area_page_2.tif  answer_area_page_2_a.tif  answer_area_page_3.tif  answer_area_page_3_a.tif  answer_area_page_4.tif  answer_area_page_4_a.tif  answer_area_page_5.tif  answer_area_page_5_a.tif  answer_area_page_6.tif  answer_area_page_6_a.tif
test/output/temporal/answers_areas/test_diary_tif/: answer_area_page_0.tif  answer_area_page_0_a.tif  answer_area_page_1.tif  answer_area_page_1_a.tif  answer_area_page_2.tif  answer_area_page_2_a.tif  answer_area_page_3.tif  answer_area_page_3_a.tif  answer_area_page_4.tif  answer_area_page_4_a.tif  answer_area_page_5.tif  answer_area_page_5_a.tif
test/output/temporal/answers_areas/test_template/: answer_area_page_0.tif  answer_area_page_0_a.tif
(+7 files in other folders)
