
[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "paperstream"
author = "Julio Vega"
author-email = "julio.vega@protonmail.com"
home-page = "https://paperstream.netlify.com"
classifiers = ["License :: OSI Approved :: MIT License", "Intended Audience :: Science/Research", 
        "Operating System :: Microsoft :: Windows :: Windows 10", 
        "Operating System :: Microsoft :: Windows :: Windows 7",
        "Operating System :: MacOS",
        "Operating System :: Unix",
        "Programming Language :: Python :: 3 :: Only",
        "Topic :: Scientific/Engineering :: Human Machine Interfaces",
        "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
description-file = "README.md"
requires = ["opencv_python (>=3.3.0.10)",
        "waitress (>=1.0.2)",
        "falcon (>=1.3.0)",
        "numpy (>=1.12.1)",
        "falcon_multipart (>=0.2.0)",
        "Pillow (>=4.3.0)",
        "PyPDF2 (>=1.26.0)",
        "reportlab (>=3.4.0)",
        "natsort (>=5.1.1)",
]

requires-python = ">=3.5"

[tool.flit.scripts]
paperstream = "paperstream.__main__:main"